--- a/layout/Menu/Sidebar/MenuItems/MenuItems.module.css
+++ b/layout/Menu/Sidebar/MenuItems/MenuItems.module.css
@@ -46,9 +46,14 @@
 }
 
 .secondLevelBlock {
+    display: none;
     overflow: hidden;
     padding: 0;
     list-style: none;
+}
+
+.secondLevelBlockOpened {
+    display: block;
 }
 
 .thirdLevel {
