--- a/layout/Menu/Sidebar/MenuItems/MenuItems.module.css
+++ b/layout/Menu/Sidebar/MenuItems/MenuItems.module.css
@@ -8,6 +8,9 @@
     line-height: 25px;
     grid-template-columns: 24px 1fr;
     gap: 20px;
+    cursor: pointer;
+    border: none;
+    background: none;
 }
 
 .firstLevelList {
